fix: aligment on footer's sub-brands on mobile

--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -2462,3 +2462,8 @@ div.grain-texture {
     background: url('../../imgs/grain-texture.webp');
   }
 }
+
+footer .footer_2line a:nth-of-type(3) {
+  grid-column: 1 / 4;
+  justify-self: center;
+}
